Changes to notebooks.

--- a/src/JetRecognizer/Resize.ipynb
+++ b/src/JetRecognizer/Resize.ipynb
@@ -2,26 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "68645eaa-045d-48ef-affb-c180ad2296ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Users/albertinopadin/Desktop/Dev/Python Projects/BuildingNeuralNets/F22_Detector',\n",
-       " '/Users/albertinopadin/Desktop/Dev/Python Projects/BuildingNeuralNets',\n",
-       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python39.zip',\n",
-       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9',\n",
-       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/lib-dynload',\n",
+       "['/home/paperspace/Desktop/ML/PlaneRecognizer/src/JetRecognizer',\n",
+       " '/home/paperspace/src/miniconda/envs/ml/lib/python39.zip',\n",
+       " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9',\n",
+       " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9/lib-dynload',\n",
        " '',\n",
-       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/site-packages',\n",
-       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/site-packages/IPython/extensions',\n",
-       " '/Users/albertinopadin/.ipython',\n",
-       " '/Users/albertinopadin/Desktop/Dev/Python Projects/BuildingNeuralNets']"
+       " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9/site-packages',\n",
+       " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9/site-packages/IPython/extensions',\n",
+       " '/home/paperspace/.ipython',\n",
+       " '/home/paperspace/Desktop/ML/BuildingNeuralNets',\n",
+       " '/home/paperspace/Desktop/ML/BuildingNeuralNets/src',\n",
+       " '/home/paperspace/Desktop/ML/JetRecognizer',\n",
+       " '/home/paperspace/Desktop/ML/JetRecognizer/src']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,27 +32,32 @@
     "import sys\n",
     "from pathlib import Path\n",
     "home = str(Path.home())\n",
-    "sys.path.append(f\"{home}/Desktop/Dev/Python Projects/BuildingNeuralNets\")\n",
-    "# sys.path.append(f\"{home}/Desktop/ML/BuildingNeuralNets\")\n",
+    "# sys.path.append(f\"{home}/Desktop/Dev/Python Projects/JetRecognizer\")\n",
+    "sys.path.append(f\"{home}/Desktop/ML/JetRecognizer/src\")\n",
     "sys.path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "bad76c73-5841-4141-870a-1cbd8b4ccad0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-27 04:53:10.705365: I tensorflow/stream_executor/platform/default/dso_loader.cc:53] Successfully opened dynamic library libcudart.so.11.0\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_5246/4236469623.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mJetRecognizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mJetRecognizerPreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mresize_fighter_images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mCommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDL_FilePaths\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_fighter_jet_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMG_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mFIGHTER_JET\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/ML/PlaneRecognizer/src/JetRecognizer/JetRecognizer.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mImagePreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mImagePreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_label_encoder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msave_label_encoder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mconvert_labels_to_one_hot_vectors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mJetRecognizerPreprocessing\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_random_train_fighter_images_as_pixel_values_generator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mget_random_validation_fighter_images_as_pixel_values_generator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mBatchLoopGenerator\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimage_batch_loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'src'"
      ]
     }
    ],
    "source": [
-    "from F22_Detector_Preprocessing import resize_fighter_images\n",
+    "from JetRecognizer.JetRecognizerPreprocessing import resize_fighter_images\n",
     "from Common.DL_FilePaths import get_fighter_jet_dir, IMG_SIZE, FIGHTER_JET"
    ]
   },
@@ -118,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
