Updates to notebooks

--- a/src/JetRecognizer/Inference.ipynb
+++ b/src/JetRecognizer/Inference.ipynb
@@ -26,12 +26,12 @@
     "import sys\n",
     "from pathlib import Path\n",
     "home = str(Path.home())\n",
-    "sys.path.append(f\"{home}/Desktop/Dev/Python Projects/BuildingNeuralNets\")\n",
-    "# sys.path.append(f\"{home}/Desktop/ML/BuildingNeuralNets\")\n",
+    "sys.path.append(f\"{home}/Desktop/Dev/Python Projects/PlaneRecognizer\")\n",
+    "# sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer\")\n",
     "sys.path\n",
     "\n",
     "from ImageObjectDetectors.TensorflowCNN4Images import TensorflowCNN4Images\n",
-    "from F22_Detector.F22_Detector_Preprocessing import load_label_encoder, normalize_pixels_in_img_obj, convert_labels_to_one_hot_vectors, \\\n",
+    "from JetRecognizerPreprocessing import load_label_encoder, normalize_pixels_in_img_obj, convert_labels_to_one_hot_vectors, \\\n",
     "    get_random_validation_fighter_images_as_pixel_values_generator, get_random_test_fighter_images_as_pixel_values_generator\n",
     "from time import perf_counter\n",
     "from ImageObjectDetectors.CNN4ImagesBase import KernelProgression\n",
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
