--- a/src/JetRecognizer/Resize.ipynb
+++ b/src/JetRecognizer/Resize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "68645eaa-045d-48ef-affb-c180ad2296ba",
    "metadata": {},
    "outputs": [
@@ -17,13 +17,11 @@
        " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9/site-packages',\n",
        " '/home/paperspace/src/miniconda/envs/ml/lib/python3.9/site-packages/IPython/extensions',\n",
        " '/home/paperspace/.ipython',\n",
-       " '/home/paperspace/Desktop/ML/BuildingNeuralNets',\n",
-       " '/home/paperspace/Desktop/ML/BuildingNeuralNets/src',\n",
-       " '/home/paperspace/Desktop/ML/JetRecognizer',\n",
-       " '/home/paperspace/Desktop/ML/JetRecognizer/src']"
+       " '/home/paperspace/Desktop/ML/PlaneRecognizer',\n",
+       " '/home/paperspace/Desktop/ML/PlaneRecognizer/src']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,38 +30,37 @@
     "import sys\n",
     "from pathlib import Path\n",
     "home = str(Path.home())\n",
-    "# sys.path.append(f\"{home}/Desktop/Dev/Python Projects/JetRecognizer\")\n",
-    "sys.path.append(f\"{home}/Desktop/ML/JetRecognizer/src\")\n",
+    "# sys.path.append(f\"{home}/Desktop/Dev/Python Projects/PlaneRecognizer\")\n",
+    "sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer\")\n",
+    "sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer/src\")\n",
     "sys.path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "bad76c73-5841-4141-870a-1cbd8b4ccad0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "\u001B[0;32m/tmp/ipykernel_5246/4236469623.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mJetRecognizer\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mJetRecognizerPreprocessing\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mresize_fighter_images\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mCommon\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mDL_FilePaths\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mget_fighter_jet_dir\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mIMG_SIZE\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mFIGHTER_JET\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/Desktop/ML/PlaneRecognizer/src/JetRecognizer/JetRecognizer.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0msrc\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mImagePreprocessing\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mImagePreprocessing\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mload_label_encoder\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msave_label_encoder\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m     \u001B[0mconvert_labels_to_one_hot_vectors\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mJetRecognizerPreprocessing\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mget_random_train_fighter_images_as_pixel_values_generator\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m\\\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m     \u001B[0mget_random_validation_fighter_images_as_pixel_values_generator\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0mBatchLoopGenerator\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mimage_batch_loop\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'src'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from JetRecognizer.JetRecognizerPreprocessing import resize_fighter_images\n",
+    "from src.JetRecognizer.JetRecognizerPreprocessing import resize_fighter_images\n",
     "from Common.DL_FilePaths import get_fighter_jet_dir, IMG_SIZE, FIGHTER_JET"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "8c774cc0-5bb9-4b80-b6ed-0fa56870626d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from src.ImagePreprocessing import ImagePreprocessing\n",
+    "# from Common import DL_FilePaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "202a3a3e-f20e-4d16-a8cf-7ca135401d01",
    "metadata": {},
    "outputs": [
@@ -73,7 +70,7 @@
        "'/home/paperspace/Desktop/DeepLearning/F-22_Detector/960/F-22s'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7722cda0-4cd0-4e3d-9607-709f115318fb",
    "metadata": {},
    "outputs": [
@@ -92,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resize_fighter_images took time: 29.488538890999962 seconds, 0.4914756481833327 minutes\n"
+      "resize_fighter_images took time: 66.42563697399964 seconds, 1.1070939495666607 minutes\n"
      ]
     }
    ],
