Refactored notebooks into their own directory; refactored method to get correct path for Jupyter notebooks / lab.

--- a/notebooks/Inference.ipynb
+++ b/notebooks/Inference.ipynb
@@ -7,6 +7,43 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['/Users/albertinopadin/Desktop/Dev/Python Projects/PlaneRecognizer/notebooks',\n",
+       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python39.zip',\n",
+       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9',\n",
+       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/lib-dynload',\n",
+       " '',\n",
+       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/site-packages',\n",
+       " '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/site-packages/IPython/extensions',\n",
+       " '/Users/albertinopadin/.ipython',\n",
+       " '/Users/albertinopadin/Desktop/Dev/Python Projects/PlaneRecognizer',\n",
+       " '/Users/albertinopadin/Desktop/Dev/Python Projects/PlaneRecognizer/src']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "curr_dir = os.path.abspath('')\n",
+    "project_dir = Path(curr_dir).parent\n",
+    "sys.path.append(f\"{project_dir}\")\n",
+    "sys.path.append(f\"{project_dir}/src\")\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7c9c11da-f8cc-442a-b767-c7880498edad",
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -23,15 +60,8 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "from pathlib import Path\n",
-    "home = str(Path.home())\n",
-    "sys.path.append(f\"{home}/Desktop/Dev/Python Projects/PlaneRecognizer\")\n",
-    "# sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer\")\n",
-    "sys.path\n",
-    "\n",
     "from ImageObjectDetectors.TensorflowCNN4Images import TensorflowCNN4Images\n",
-    "from JetRecognizerPreprocessing import load_label_encoder, normalize_pixels_in_img_obj, convert_labels_to_one_hot_vectors, \\\n",
+    "from JetRecognizer.JetRecognizerPreprocessing import load_label_encoder, normalize_pixels_in_img_obj, convert_labels_to_one_hot_vectors, \\\n",
     "    get_random_validation_fighter_images_as_pixel_values_generator, get_random_test_fighter_images_as_pixel_values_generator\n",
     "from time import perf_counter\n",
     "from ImageObjectDetectors.CNN4ImagesBase import KernelProgression\n",
@@ -44,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "43e1e40e-df86-4b36-bb1b-65473eef6e3d",
    "metadata": {},
    "outputs": [
@@ -54,8 +84,8 @@
      "text": [
       "Using Kernel Progression: KernelProgression.KERNEL_GETS_BIGGER\n",
       "TF Keras backend: <module 'keras.api._v2.keras.backend' from '/Users/albertinopadin/miniforge3/envs/dev/lib/python3.9/site-packages/keras/api/_v2/keras/backend/__init__.py'>\n",
-      "Input Shape: (960, 960, 3)Metal device set to: Apple M1 Max\n",
-      "\n",
+      "Metal device set to: Apple M1 Max\n",
+      "Input Shape: (960, 960, 3)\n",
       "Model: \"ImageCNN_TF\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
@@ -116,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "27deb0bf-0a52-40b1-aedd-c30e2c468a40",
    "metadata": {},
    "outputs": [],
@@ -128,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3b491641-bb33-4753-ad18-f4f6b718c193",
    "metadata": {},
    "outputs": [],
@@ -145,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c58c3cbd-2a2b-4275-9c58-3360c12cc447",
    "metadata": {},
    "outputs": [],
@@ -169,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fd7aff68-48a5-4897-ba25-6f2aad70af6a",
    "metadata": {},
    "outputs": [],
@@ -179,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8ccf8213-a502-4f3a-bb25-f88d4e4eb072",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9b5d99dce804a8ab13a7ae075191c1a",
+       "model_id": "afc2bb9ded51415ca73bcabff8124d40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,22 +237,6 @@
     "    lbl_pred\n",
     "])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c927bbd-4f6e-43f4-afe9-edeaf155955b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b09f50e9-70a4-4d47-aa60-6161800b802c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -249,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
