--- a/notebooks/Resize.ipynb
+++ b/notebooks/Resize.ipynb
@@ -28,11 +28,12 @@
    ],
    "source": [
     "import sys\n",
+    "import os\n",
     "from pathlib import Path\n",
-    "home = str(Path.home())\n",
-    "# sys.path.append(f\"{home}/Desktop/Dev/Python Projects/PlaneRecognizer\")\n",
-    "sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer\")\n",
-    "sys.path.append(f\"{home}/Desktop/ML/PlaneRecognizer/src\")\n",
+    "curr_dir = os.path.abspath('')\n",
+    "project_dir = Path(curr_dir).parent\n",
+    "sys.path.append(f\"{project_dir}\")\n",
+    "sys.path.append(f\"{project_dir}/src\")\n",
     "sys.path"
    ]
   },
@@ -122,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
