Tried out voila for Jupyter notebooks.

--- a/notebooks/Inference.ipynb
+++ b/notebooks/Inference.ipynb
@@ -39,6 +39,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "6ab822b8-5e78-4d4b-8b59-f10633127a0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install voila\n",
+    "# !jupyter serverextension enable voila --sys-prefix"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "7c9c11da-f8cc-442a-b767-c7880498edad",
    "metadata": {},
